--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@shelex/cypress-allure-plugin": "^2.40.0",
     "cypress": "^13.2.0",
     "cypress-cucumber-preprocessor": "^4.3.1"
   },
